# chatbot_ai

./: pyproject.toml
chat_ai/: main.py
chat_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chat_ai.py
